--- a/00_dapp_react_hardhat_moralis/vote-dapp/src/components/Coin.css
+++ b/00_dapp_react_hardhat_moralis/vote-dapp/src/components/Coin.css
@@ -35,7 +35,7 @@
   
   .token {
       text-align: center;
-      color: white;
+      color: #892323;
       font-size: 30px;
       font-weight: bold;
       margin-bottom: 20px;
